# Video-Web-Hosting-Platform

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRD.md  PROGRESS.md
.agent/plans/: 1.scaffold-auth.md  2.video-upload.md  3.transcode-pipeline.md
backend/: .env.example  auth.py  config.py  database.py  main.py  pyproject.toml  run_migration.py
backend/models/: video.py
backend/routers/: public.py  users.py  videos.py
backend/services/: storage.py  thumbnail.py  transcode.py
backend/workers/: transcode_worker.py
frontend/: package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/embed/[id]/: layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/watch/[id]/: layout.tsx  page.tsx
frontend/src/components/: navbar.tsx  upload-dropzone.tsx  video-card.tsx  video-player.tsx
frontend/src/lib/: api.ts
frontend/src/lib/supabase/: middleware.ts
supabase/migrations/: 001_profiles.sql  002_videos.sql  003_visibility_views.sql
